--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
-.App {
-  text-align: center;
+header{
+	height : 100px;
+	display : flex;
+	align-items : center;
+	background : #6441A5;
+	background : -webkit-linear-gradient(to right, #2a0845, #6441A5);
+	background : linear-gradient(to right, #2a0845, #6441A5);
+}
+footer{
+	height : 100px;
+	background : #6441A5;
+	display : flex;
+	align-items : flex-end;
+}
+footer > p{
+	font-family: VT323, monospace;
+	position: unset;
+	margin-left : 10%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header > img{
+	height : 80%;
+	margin-left : 10%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header > p {
+	font-family: VT323, monospace;
+	color : whitesmoke;
+	font-size: 50px;
+	margin-left : 60px;
+}
+.meme-form{
+	width: 90%;
+	margin: 20px auto;
+	display: flex;
+	justify-content: space-between;
+}
+.meme > img{
+	width: 100%;
+}
+.meme >h2{
+	position: absolute;
+	width: 80%;
+	text-align: center;
+	left: 50%;
+	transform: translateX(-50%);
+	margin: 15px 0;
+	padding: 8 5px;
+	font-family: impact, sans-serif;
+	font-size: 2em;
+	text-transform: uppercase;
+	color: white;
+	letter-spacing: 1px;
+	text-shadow: 
+		2px 2px 0 #000,
+		-2px -2px 0 #000
+}
+.meme > .top{
+	top : 0;
+}
+.meme > .bottom{
+	bottom: 0;
+}
+.meme{
+	position: relative;
+	width: 90%;
+	margin : auto;
+}
+.meme > img{
+	width: 90%;
+}
+.meme > h2 {
+	position : absolute
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.meme-form > button{
+	border: none;
+	font-family: VT323, monospace;
+	font-size: 25px;
+	letter-spacing : 1.5px;
+	color : white;
+	background : #6441A5;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/** chrome*/
+.meme-form > input::-webkit-input-placeholder{ 
+	font-family : VT323,monospace;
+	font-size : 25px;
+	text-align : center
 }
